--- a/src/style.scss
+++ b/src/style.scss
@@ -1,3 +1,9 @@
 body{
   background-color: blueviolet;
 }
+canvas{
+  height: 300px;
+  width: 300px;
+  background-color: rgb(156, 156, 156);
+  // background-color: rgb(32, 32, 32);
+}
