--- a/src/style.scss
+++ b/src/style.scss
@@ -1,9 +1,20 @@
 body{
   background-color: blueviolet;
+  margin: 0;
+}
+#body{
+  position: fixed;
+  z-index: -9;
+  width: 100%;
+  height: 100%;
+  backdrop-filter: blur(40px);
+  // background-color: rgb(54, 54, 54, 0.08);
 }
 canvas{
-  height: 300px;
-  width: 300px;
-  background-color: rgb(156, 156, 156);
+  position: fixed;
+  z-index: -10;
+  width: auto;
+  height: 100%;
+  background-color: rgb(54, 54, 54);
   // background-color: rgb(32, 32, 32);
 }
