--- a/src/style.scss
+++ b/src/style.scss
@@ -15,6 +15,6 @@ canvas{
   z-index: -10;
   width: auto;
   height: 100%;
-  background-color: rgb(54, 54, 54);
+  background-color: #363636;
   // background-color: rgb(32, 32, 32);
 }
