--- a/src/style.scss
+++ b/src/style.scss
@@ -2,19 +2,20 @@ body{
   background-color: blueviolet;
   margin: 0;
 }
-#body{
-  position: fixed;
-  z-index: -9;
-  width: 100%;
-  height: 100%;
-  backdrop-filter: blur(40px);
-  // background-color: rgb(54, 54, 54, 0.08);
-}
+// #body{
+//   position: fixed;
+//   z-index: -9;
+//   width: 100%;
+//   height: 100%;
+//   backdrop-filter: blur(40px);
+//   // background-color: rgb(54, 54, 54, 0.08);
+// }
 canvas{
   position: fixed;
   z-index: -10;
-  width: auto;
+  width: 100%;
   height: 100%;
   background-color: #363636;
   // background-color: rgb(32, 32, 32);
+  // color:#363636
 }
