--- a/src/style.scss
+++ b/src/style.scss
@@ -6,9 +6,12 @@ body{
 .dd{
   width: 100px;
   height: 100px;
-  filter: blur(10px);
-  fill:red;
-  transition: 2s;
+  // filter: blur(10px);
+  background-color:red;
+  position: absolute;
+  // left: 50%;
+  // top: 50%;
+  transform: translate(500px,0%);
 }
 
 #body{
@@ -19,22 +22,4 @@ body{
   left: 0;
   z-index: 1;
   color: #ffffff;
-}
-@keyframes start {
-  0% {
-    filter: opacity(1);
-  }
-  
-  100% {
-    filter: blur(100px) opacity(0);
-  }
-}
-@keyframes end {
-  0% {
-    filter: blur(100px) opacity(0);
-  }
-  
-  100% {
-    filter: opacity(1);
-  }
 }
