--- a/src/style.scss
+++ b/src/style.scss
@@ -2,6 +2,7 @@ body{
   background-color: #292929;
   margin: 0;
   overflow-x: hidden;
+  color: #ffffff;
 }
 .dd{
   width: 100px;
@@ -12,7 +13,7 @@ body{
   // left: 50%;
   // top: 50%;
   transform: translate(500px,0%);
-  opacity: 0;
+  opacity: 1;
 }
 
 #body{
@@ -20,7 +21,6 @@ body{
   height: 100%;
   position: absolute;
   top: 0%;
-  left: 0;
+  left: 0%;
   z-index: 1;
-  color: #ffffff;
 }
