--- a/src/interfaces_GLASSlOLLIPOPS.scss
+++ b/src/interfaces_GLASSlOLLIPOPS.scss
@@ -22,7 +22,7 @@ body{
     background-color: #a8e4a052;
     border-radius: 15px;
     padding: 25px;
-    margin: 0 auto;
+    margin: 10px auto;
     .GLASSlOLLIPOPS_div{
       border: #ffffff 2.5px solid;
     }
