--- a/src/interfaces_GLASSlOLLIPOPS.scss
+++ b/src/interfaces_GLASSlOLLIPOPS.scss
@@ -16,7 +16,7 @@ body{
   color: #ffffff;
 }
 #body{
-  font-family: "junegull1";
+  font-family: "junegull1", "junegull2", "junegull3";
   font-size: 17px;
   width: 100%;
   height: 100%;
