--- a/src/interfaces_GLASSlOLLIPOPS.scss
+++ b/src/interfaces_GLASSlOLLIPOPS.scss
@@ -52,10 +52,11 @@ body{
     border-top: 0;
     width: 76%;
     background-color: #ff4e756e;
+    // background-color: #9b32c76e;
+    // background-color: #5e41fb6e;
     backdrop-filter: blur(40px);
     border-radius: 0 0 81px 81px;
     padding: 20px 40px 30px;
-    // padding-bottom: 40px;
     margin: 10px auto;
     margin-top: 0;
 
