--- a/src/interfaces_GLASSlOLLIPOPS.scss
+++ b/src/interfaces_GLASSlOLLIPOPS.scss
@@ -14,9 +14,9 @@ body{
   background-color: #292929;
   margin: 0;
   color: #ffffff;
+  font-family: "junegull1", "junegull2", "junegull3";
 }
 #body{
-  font-family: "junegull1", "junegull2", "junegull3";
   font-size: 17px;
   width: 100%;
   height: 100%;
@@ -25,40 +25,58 @@ body{
   left: 0%;
   z-index: 1;
 
-  .GLASSlOLLIPOPS_div{
-    width: 85%;
-    height: 200px;
-    background-color: #a8e4a052;
-    backdrop-filter: blur(40px);
-    border-radius: 15px;
-    padding: 25px;
-    margin: 10px auto;
-    .GLASSlOLLIPOPS_div{
-      border: #ffffff 2.5px solid;
-    }
-  }
-  .GLASSlOLLIPOPS_span{
-    display: inline-block;
-    background-color: #292929;
-    border-radius: 8px;
-    padding: 5px 8px;
-    margin: 2px;
-    .GLASSlOLLIPOPS_span{
-      border: #ffffff 2px solid;
-    }
-  }
-  .GLASSlOLLIPOPS_header{
-    border: #ffffff 3.5px solid;
-    border-top: 0;
-    width: 76%;
-    background-color: #ff4e756e;
-    // background-color: #9b32c76e;
-    // background-color: #5e41fb6e;
-    backdrop-filter: blur(40px);
-    border-radius: 0 0 81px 81px;
-    padding: 20px 40px 30px;
-    margin: 10px auto;
-    margin-top: 0;
 
+}
+
+.GLASSlOLLIPOPS_div{
+  width: 85%;
+  background-color: #a8e4a052;
+  // background-color: #fdca9352;
+  // background-color: #ece9b252;
+  // background-color: #f3ffab52;
+  // background-color: #abfff252;
+  // background-color: #a1c9df52;
+  // background-color: #a5a1df52;
+  // background-color: #d49fdf52;
+  // background-color: #efb2b252;
+  backdrop-filter: blur(40px);
+  border-radius: 15px;
+  padding: 25px;
+  margin: 10px auto;
+  .GLASSlOLLIPOPS_div{
+    border: #ffffff 2.5px solid;
   }
+}
+.GLASSlOLLIPOPS_span{
+  display: inline-block;
+  background-color: #292929;
+  border-radius: 8px;
+  padding: 5px 8px;
+  margin: 2px;
+  .GLASSlOLLIPOPS_span{
+    border: #ffffff 2px solid;
+  }
+}
+.GLASSlOLLIPOPS_header{
+  border: #ffffff 3.5px solid;
+  border-top: 0;
+  width: 76%;
+  background-color: #ff4e756e;
+  // background-color: #9b32c76e;
+  // background-color: #5e41fb6e;
+  backdrop-filter: blur(40px);
+  border-radius: 0 0 81px 81px;
+  padding: 20px 40px 30px;
+  margin: 10px auto;
+  margin-top: 0;
+  margin-bottom: 40px;
+}
+.GLASSlOLLIPOPS_button{
+  background-color: #18ffc46e;
+  display: inline-block;
+  color: #292929;
+  border-radius: 8px;
+  padding: 5px 8px;
+  margin: 2px;
+  border: #292929 2.5px solid;
 }
