--- a/src/interfaces_GLASSlOLLIPOPS.scss
+++ b/src/interfaces_GLASSlOLLIPOPS.scss
@@ -121,6 +121,9 @@ body{
   border: #ffffff 0px solid;
   width: 16px;
   height: 16px;
+  background-color: #ff0000;
+  color: #ff0000;
+  // background-color: #ffffff6e;
 }
 
 
