--- a/src/GLASSlOLLIPOPS/interfaces_GLASSlOLLIPOPS.scss
+++ b/src/GLASSlOLLIPOPS/interfaces_GLASSlOLLIPOPS.scss
@@ -1,14 +1,14 @@
 @font-face{
   font-family: junegull1;
-  src: url(/junegull/junegull-regular.ttf);
+  src: url(/GLASSlOLLIPOPS_public/junegull/junegull-regular.ttf);
 }
 @font-face{
   font-family: junegull2;
-  src: url(/junegull/junegull-regular.woff);
+  src: url(/GLASSlOLLIPOPS_public/junegull/junegull-regular.woff);
 }
 @font-face{
   font-family: junegull3;
-  src: url(/junegull/junegull-regular.woff2);
+  src: url(/GLASSlOLLIPOPS_public/junegull/junegull-regular.woff2);
 }
 body{
   background-color: #292929;
@@ -30,15 +30,15 @@ body{
 
 .GLASSlOLLIPOPS_div{
   width: 85%;
-  background-color: #a8e4a052;
-  // background-color: #fdca9352;
-  // background-color: #ece9b252;
-  // background-color: #f3ffab52;
-  // background-color: #abfff252;
-  // background-color: #a1c9df52;
-  // background-color: #a5a1df52;
-  // background-color: #d49fdf52;
-  // background-color: #efb2b252;
+  // background-color: #a8e4a052; // 1 background-div
+  // background-color: #fdca9352; // 2 background-div
+  // background-color: #ece9b252; // 3 background-div
+  // background-color: #f3ffab52; // 4 background-div
+  // background-color: #abfff252; // 5 background-div
+  background-color: #a1c9df52; // 6 background-div
+  // background-color: #a5a1df52; // 7 background-div
+  // background-color: #d49fdf52; // 8 background-div
+  // background-color: #efb2b252; // 9 background-div
   backdrop-filter: blur(40px);
   border-radius: 15px;
   padding: 25px;
@@ -55,9 +55,9 @@ body{
   // background-color: #00dd1b6e; // 3 background-button
   // background-color: #efe9196e; // 4 background-button
   // background-color: #ff8d186e; // 5 background-button
-  // background-color: #ABCDEF6e; // 6 background-button
+  background-color: #ABCDEF6e; // 6 background-button
   // background-color: #D870936e; // 7 background-button
-  background-color: #62639B6e; // 8 background-button
+  // background-color: #62639B6e; // 8 background-button
   color: #000000;
   border-radius: 8px;
   padding: 5px 8px;
@@ -72,10 +72,10 @@ body{
   // background-color: #9327276e; // 2 background-a
   // background-color: #146d1f6e; // 3 background-a
   // background-color: #8b870d6e; // 4 background-a
-  background-color: #834f196e; // 5 background-a
+  // background-color: #834f196e; // 5 background-a
   // background-color: #2965a16e; // 6 background-a
   // background-color: #7e08306e; // 7 background-a
-  // background-color: #0f12936e; // 8 background-a
+  background-color: #0f12936e; // 8 background-a
   // color: #9fafff; // 1 color_border-a
   // color: #c09fff; // 2 color_border-a
   color: #e9cd8f; // 3 color_border-a
@@ -130,7 +130,7 @@ body{
   margin: auto 10px;
 }
 .GLASSlOLLIPOPS_checkbox:checked+label{
-  background: url("/svg/check_ailr35g5hnkk.svg") center / cover;
+  background: url("/GLASSlOLLIPOPS_public/svg/check_ailr35g5hnkk.svg") center / cover;
   background-color: #ffffff6e;
   transition: 0.3s;
 }
@@ -157,9 +157,9 @@ body{
   // background-color: #00dd1b; // 3 background-button
   // background-color: #efe919; // 4 background-button
   // background-color: #ff8d18; // 5 background-button
-  // background-color: #ABCDEF; // 6 background-button
+  background-color: #ABCDEF; // 6 background-button
   // background-color: #D87093; // 7 background-button
-  background-color: #62639B; // 8 background-button
+  // background-color: #62639B; // 8 background-button
   transition: 0.3s;
   cursor: pointer;
 }
@@ -168,10 +168,10 @@ body{
   // background-color: #932727; // 2 background-a
   // background-color: #146d1f; // 3 background-a
   // background-color: #8b870d; // 4 background-a
-  background-color: #834f19; // 5 background-a
+  // background-color: #834f19; // 5 background-a
   // background-color: #2965a1; // 6 background-a
   // background-color: #7e0830; // 7 background-a
-  // background-color: #0f1293; // 8 background-a
+  background-color: #0f1293; // 8 background-a
   color: #ffffff;
   border: #ffffff 2.5px solid;
   transition: 0.3s;
@@ -182,7 +182,7 @@ body{
   transition: 0.3s;
 }
 .GLASSlOLLIPOPS_checkbox:checked+label:hover{
-  background: url("/svg/check_ailr35g5hnkkHover.svg") center / cover;
+  background: url("/GLASSlOLLIPOPS_public/svg/check_ailr35g5hnkkHover.svg") center / cover;
   background-color: #ffffff;
   transition: 0.3s;
 }
