--- a/src/GLASSlOLLIPOPS/interfaces_GLASSlOLLIPOPS.scss
+++ b/src/GLASSlOLLIPOPS/interfaces_GLASSlOLLIPOPS.scss
@@ -89,6 +89,7 @@ body{
   // border: #8fe9a2 2.5px solid; // 4 color_border-a
   transition: 0.3s;
   text-decoration: none;
+  display: inline-block;
 }
 .GLASSlOLLIPOPS_span{
   display: inline-block;
