--- a/src/GLASSlOLLIPOPS/interfaces_GLASSlOLLIPOPS.scss
+++ b/src/GLASSlOLLIPOPS/interfaces_GLASSlOLLIPOPS.scss
@@ -30,12 +30,12 @@ body{
 
 .GLASSlOLLIPOPS_div{
   width: 85%;
-  // background-color: #a8e4a052; // 1 background-div
+  background-color: #a8e4a052; // 1 background-div
   // background-color: #fdca9352; // 2 background-div
   // background-color: #ece9b252; // 3 background-div
   // background-color: #f3ffab52; // 4 background-div
   // background-color: #abfff252; // 5 background-div
-  background-color: #a1c9df52; // 6 background-div
+  // background-color: #a1c9df52; // 6 background-div
   // background-color: #a5a1df52; // 7 background-div
   // background-color: #d49fdf52; // 8 background-div
   // background-color: #efb2b252; // 9 background-div
@@ -50,12 +50,12 @@ body{
 .GLASSlOLLIPOPS_button{
   font-size: 16px;
   font-family: "junegull1", "junegull2", "junegull3";
-  // background-color: #18ffc46e; // 1 background-button
+  background-color: #18ffc46e; // 1 background-button
   // background-color: #ff18186e; // 2 background-button
   // background-color: #00dd1b6e; // 3 background-button
   // background-color: #efe9196e; // 4 background-button
   // background-color: #ff8d186e; // 5 background-button
-  background-color: #ABCDEF6e; // 6 background-button
+  // background-color: #ABCDEF6e; // 6 background-button
   // background-color: #D870936e; // 7 background-button
   // background-color: #62639B6e; // 8 background-button
   color: #000000;
@@ -68,24 +68,24 @@ body{
 .GLASSlOLLIPOPS_a{
   font-size: 16px;
   font-family: "junegull1", "junegull2", "junegull3";
-  // background-color: #0e93716e; // 1 background-a
+  background-color: #0e93716e; // 1 background-a
   // background-color: #9327276e; // 2 background-a
   // background-color: #146d1f6e; // 3 background-a
   // background-color: #8b870d6e; // 4 background-a
   // background-color: #834f196e; // 5 background-a
   // background-color: #2965a16e; // 6 background-a
   // background-color: #7e08306e; // 7 background-a
-  background-color: #0f12936e; // 8 background-a
-  // color: #9fafff; // 1 color_border-a
+  // background-color: #0f12936e; // 8 background-a
+  color: #9fafff; // 1 color_border-a
   // color: #c09fff; // 2 color_border-a
-  color: #e9cd8f; // 3 color_border-a
+  // color: #e9cd8f; // 3 color_border-a
   // color: #8fe9a2; // 4 color_border-a
   border-radius: 8px;
   padding: 5px 8px;
   margin: 2px;
-  // border: #9fafff 2.5px solid; // 1 color_border-a
+  border: #9fafff 2.5px solid; // 1 color_border-a
   // border: #c09fff 2.5px solid; // 2 color_border-a
-  border: #e9cd8f 2.5px solid; // 3 color_border-a
+  // border: #e9cd8f 2.5px solid; // 3 color_border-a
   // border: #8fe9a2 2.5px solid; // 4 color_border-a
   transition: 0.3s;
   text-decoration: none;
@@ -153,26 +153,26 @@ body{
 
 
 .GLASSlOLLIPOPS_button:hover{
-  // background-color: #18ffc4; // 1 background-button
+  background-color: #18ffc4; // 1 background-button
   // background-color: #ff1818; // 2 background-button
   // background-color: #00dd1b; // 3 background-button
   // background-color: #efe919; // 4 background-button
   // background-color: #ff8d18; // 5 background-button
-  background-color: #ABCDEF; // 6 background-button
+  // background-color: #ABCDEF; // 6 background-button
   // background-color: #D87093; // 7 background-button
   // background-color: #62639B; // 8 background-button
   transition: 0.3s;
   cursor: pointer;
 }
 .GLASSlOLLIPOPS_a:hover{
-  // background-color: #0e9371; // 1 background-a
+  background-color: #0e9371; // 1 background-a
   // background-color: #932727; // 2 background-a
   // background-color: #146d1f; // 3 background-a
   // background-color: #8b870d; // 4 background-a
   // background-color: #834f19; // 5 background-a
   // background-color: #2965a1; // 6 background-a
   // background-color: #7e0830; // 7 background-a
-  background-color: #0f1293; // 8 background-a
+  // background-color: #0f1293; // 8 background-a
   color: #ffffff;
   border: #ffffff 2.5px solid;
   transition: 0.3s;
