--- a/src/GLASSlOLLIPOPS/interfaces_GLASSlOLLIPOPS.scss
+++ b/src/GLASSlOLLIPOPS/interfaces_GLASSlOLLIPOPS.scss
@@ -1,3 +1,10 @@
+// <!--  class="GLASSlOLLIPOPS_div" -->
+// <!--  class="GLASSlOLLIPOPS_span" -->
+// <!--  class="GLASSlOLLIPOPS_header" -->
+// <!--  class="GLASSlOLLIPOPS_button" -->
+// <!--  class="GLASSlOLLIPOPS_a" -->
+// <!--  class="GLASSlOLLIPOPS_checkbox" -->
+// <!--  class="GLASSlOLLIPOPS_color" -->
 @font-face{
   font-family: junegull1;
   src: url(/GLASSlOLLIPOPS_public/junegull/junegull-regular.ttf);
@@ -30,11 +37,11 @@ body{
 
 .GLASSlOLLIPOPS_div{
   width: 85%;
-  background-color: #a8e4a052; // 1 background-div
+  // background-color: #a8e4a052; // 1 background-div
   // background-color: #fdca9352; // 2 background-div
   // background-color: #ece9b252; // 3 background-div
   // background-color: #f3ffab52; // 4 background-div
-  // background-color: #abfff252; // 5 background-div
+  background-color: #abfff252; // 5 background-div
   // background-color: #a1c9df52; // 6 background-div
   // background-color: #a5a1df52; // 7 background-div
   // background-color: #d49fdf52; // 8 background-div
@@ -50,12 +57,12 @@ body{
 .GLASSlOLLIPOPS_button{
   font-size: 16px;
   font-family: "junegull1", "junegull2", "junegull3";
-  background-color: #18ffc46e; // 1 background-button
+  // background-color: #18ffc46e; // 1 background-button
   // background-color: #ff18186e; // 2 background-button
   // background-color: #00dd1b6e; // 3 background-button
   // background-color: #efe9196e; // 4 background-button
   // background-color: #ff8d186e; // 5 background-button
-  // background-color: #ABCDEF6e; // 6 background-button
+  background-color: #ABCDEF6e; // 6 background-button
   // background-color: #D870936e; // 7 background-button
   // background-color: #62639B6e; // 8 background-button
   color: #000000;
@@ -68,24 +75,24 @@ body{
 .GLASSlOLLIPOPS_a{
   font-size: 16px;
   font-family: "junegull1", "junegull2", "junegull3";
-  background-color: #0e93716e; // 1 background-a
+  // background-color: #0e93716e; // 1 background-a
   // background-color: #9327276e; // 2 background-a
   // background-color: #146d1f6e; // 3 background-a
   // background-color: #8b870d6e; // 4 background-a
-  // background-color: #834f196e; // 5 background-a
+  background-color: #834f196e; // 5 background-a
   // background-color: #2965a16e; // 6 background-a
   // background-color: #7e08306e; // 7 background-a
   // background-color: #0f12936e; // 8 background-a
-  color: #9fafff; // 1 color_border-a
+  // color: #9fafff; // 1 color_border-a
   // color: #c09fff; // 2 color_border-a
-  // color: #e9cd8f; // 3 color_border-a
+  color: #e9cd8f; // 3 color_border-a
   // color: #8fe9a2; // 4 color_border-a
   border-radius: 8px;
   padding: 5px 8px;
   margin: 2px;
-  border: #9fafff 2.5px solid; // 1 color_border-a
+  // border: #9fafff 2.5px solid; // 1 color_border-a
   // border: #c09fff 2.5px solid; // 2 color_border-a
-  // border: #e9cd8f 2.5px solid; // 3 color_border-a
+  border: #e9cd8f 2.5px solid; // 3 color_border-a
   // border: #8fe9a2 2.5px solid; // 4 color_border-a
   transition: 0.3s;
   text-decoration: none;
@@ -118,10 +125,10 @@ body{
   margin-top: 0;
   margin-bottom: 40px;
 }
-.GLASSlOLLIPOPS_checkbox{
+.GLASSlOLLIPOPS_input[type="checkbox"]{
   display: none;
 }
-.GLASSlOLLIPOPS_checkbox+label{
+.GLASSlOLLIPOPS_input[type="checkbox"]+label{
   display: inline-block;
   width: 18px;
   height: 18px;
@@ -130,12 +137,15 @@ body{
   transition: 0.3s;
   margin: auto 10px;
 }
-.GLASSlOLLIPOPS_checkbox:checked+label{
+.GLASSlOLLIPOPS_input[type="checkbox"]:checked+label{
   background: url("/GLASSlOLLIPOPS_public/svg/check_ailr35g5hnkk.svg") center / cover;
-  background-color: #ffffff6e;
+  background-color: #ffffff80;
   transition: 0.3s;
 }
-.GLASSlOLLIPOPS_color{
+
+// до делать
+
+.GLASSlOLLIPOPS_input[type="color"]{
   display: inline-block;
   // width: 18px;
   // height: 18px;
@@ -146,44 +156,91 @@ body{
   margin: auto 10px;
 }
 
+// до делать
+
+.GLASSlOLLIPOPS_input[type="text"]{ 
+  // background-color: #a8e4a052; // 1 background-div
+  // background-color: #fdca9352; // 2 background-div
+  // background-color: #ece9b252; // 3 background-div
+  // background-color: #f3ffab52; // 4 background-div
+  background-color: #abfff252; // 5 background-div
+  // background-color: #a1c9df52; // 6 background-div
+  // background-color: #a5a1df52; // 7 background-div
+  // background-color: #d49fdf52; // 8 background-div
+  // background-color: #efb2b252; // 9 background-div
+color:#ffffffcc;
+border: #ffffff 0px solid;
+border-radius: 7px;
+padding: 7px;
+font-size: 15px;
+}
+.GLASSlOLLIPOPS_input[type="text"]::-moz-placeholder { color: #ffffff8c; }
+.GLASSlOLLIPOPS_input[type="text"]::-webkit-input-placeholder { color: #ffffff8c; }
+
 
 
 // hover
 
 
 
-.GLASSlOLLIPOPS_button:hover{
-  background-color: #18ffc4; // 1 background-button
-  // background-color: #ff1818; // 2 background-button
-  // background-color: #00dd1b; // 3 background-button
-  // background-color: #efe919; // 4 background-button
-  // background-color: #ff8d18; // 5 background-button
-  // background-color: #ABCDEF; // 6 background-button
-  // background-color: #D87093; // 7 background-button
-  // background-color: #62639B; // 8 background-button
-  transition: 0.3s;
-  cursor: pointer;
+@media screen and (min-width: 800px) {
+  .GLASSlOLLIPOPS_button:hover{
+    // background-color: #18ffc4; // 1 background-button
+    // background-color: #ff1818; // 2 background-button
+    // background-color: #00dd1b; // 3 background-button
+    // background-color: #efe919; // 4 background-button
+    // background-color: #ff8d18; // 5 background-button
+    background-color: #ABCDEF; // 6 background-button
+    // background-color: #D87093; // 7 background-button
+    // background-color: #62639B; // 8 background-button
+    transition: 0.3s;
+    cursor: pointer;
+  }
+  .GLASSlOLLIPOPS_a:hover{
+    // background-color: #0e9371; // 1 background-a
+    // background-color: #932727; // 2 background-a
+    // background-color: #146d1f; // 3 background-a
+    // background-color: #8b870d; // 4 background-a
+    background-color: #834f19; // 5 background-a
+    // background-color: #2965a1; // 6 background-a
+    // background-color: #7e0830; // 7 background-a
+    // background-color: #0f1293; // 8 background-a
+    color: #ffffff;
+    border: #ffffff 2.5px solid;
+    transition: 0.3s;
+    cursor: pointer;
+  }
+  .GLASSlOLLIPOPS_input[type="checkbox"]+label:hover{
+    background-color: #ffffff;
+    transition: 0.3s;
+  }
+  .GLASSlOLLIPOPS_input[type="checkbox"]:checked+label:hover{
+    background: url("/GLASSlOLLIPOPS_public/svg/check_ailr35g5hnkkHover.svg") center / cover;
+    background-color: #ffffff;
+    transition: 0.3s;
+  }
 }
-.GLASSlOLLIPOPS_a:hover{
-  background-color: #0e9371; // 1 background-a
-  // background-color: #932727; // 2 background-a
-  // background-color: #146d1f; // 3 background-a
-  // background-color: #8b870d; // 4 background-a
-  // background-color: #834f19; // 5 background-a
-  // background-color: #2965a1; // 6 background-a
-  // background-color: #7e0830; // 7 background-a
-  // background-color: #0f1293; // 8 background-a
-  color: #ffffff;
-  border: #ffffff 2.5px solid;
-  transition: 0.3s;
-  cursor: pointer;
+
+
+// media screen
+
+
+@media screen and (max-width: 490px) {
+  .GLASSlOLLIPOPS_header{
+    padding: 10px 25px 10px;
+  }
 }
-.GLASSlOLLIPOPS_checkbox+label:hover{
-  background-color: #ffffff;
-  transition: 0.3s;
+@media screen and (max-width: 340px) {
+  .GLASSlOLLIPOPS_header{
+    h1{
+      font-size: 29px;
+    }
+  }
 }
-.GLASSlOLLIPOPS_checkbox:checked+label:hover{
-  background: url("/GLASSlOLLIPOPS_public/svg/check_ailr35g5hnkkHover.svg") center / cover;
-  background-color: #ffffff;
-  transition: 0.3s;
+@media screen and (max-width: 250px) {
+  .GLASSlOLLIPOPS_header{
+    h1{
+      font-size: 26px;
+    }
+  }
 }
