--- a/src/movie_search/movieStyle.scss
+++ b/src/movie_search/movieStyle.scss
@@ -39,4 +39,10 @@
         justify-content: space-evenly;
         
     }
+    .A2buttonBlock{
+        margin-top: 30px;
+        display: flex;
+        justify-content: space-evenly;
+        
+    }
 }
