--- a/src/all_packages-nodeJS/packagesS.scss
+++ b/src/all_packages-nodeJS/packagesS.scss
@@ -1,11 +1,11 @@
 .GLASSlOLLIPOPS_div{
     width: 600px;
-    display: flex;
-    flex-direction: column;
-    align-items: center;
+    // display: flex;
+    // flex-direction: column;
+    // align-items: center;
     .GLASSlOLLIPOPS_span{
-        display: flex;
-        align-items: center;
+        // display: flex;
+        // align-items: center;
     }
 }
 .GLASSlOLLIPOPS_span{
