--- a/src/all_packages-nodeJS/packagesS.scss
+++ b/src/all_packages-nodeJS/packagesS.scss
@@ -1,5 +1,5 @@
 .GLASSlOLLIPOPS_div{
-    width: 600px;
+    max-width: 600px;
     // display: flex;
     // flex-direction: column;
     // align-items: center;
