--- a/src/style.scss
+++ b/src/style.scss
@@ -10,3 +10,12 @@ h1 a{
         color:#e6e6e6;
     }
 }
+
+@media screen and (max-width: 430px) {
+    .GLASSlOLLIPOPS_span {
+        // background-color: #e9cd8f;
+          display: flex;
+          flex-direction: column;
+          align-items: center;
+      }
+    }
