--- a/src/GLASSlOLLIPOPS/interfaces_GLASSlOLLIPOPS.scss
+++ b/src/GLASSlOLLIPOPS/interfaces_GLASSlOLLIPOPS.scss
@@ -305,7 +305,7 @@ font-size: 15px;
     .GLASSlOLLIPOPS_div {
         width: auto;
         display: block;
-        margin: 10px 6px;
+        margin: 10px auto;
       }
   }
 
